# organized_code

./: .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  collect_preds.py  complete_sm.ipynb  main.py  predicting.py  predicting_para.py  preprocess.ipynb  pyproject.toml  read_npy.ipynb  training.py  training_para.py
config/: E.toml  E_debug.toml  F.toml
data/: tmp_downloader.py
notebooks/: complete_lwe.ipynb  examine_prediction.ipynb  extend_dataset.ipynb  preprocess.ipynb
old/: predicting.py  predicting_para.py  training.py  training_para.py
old/utils/: eval.py  model.py  predict.py  train.py
scripts/: collect_preds.py
src/giems_lstm/: config.py  main.py
src/giems_lstm/data/: __init__.py  dataset.py  prepare.py  scaler.py
src/giems_lstm/engine/: __init__.py  collector.py  evaluator.py  predictor.py  trainer.py
src/giems_lstm/model/: __init__.py  gru.py  grukan.py  kanlinear.py  lstm.py  lstmkan.py
src/giems_lstm/utils/: allocate_coords.py  collect.py  train.py
tests/: test_cli.py  test_model.py
utils/: config.py  dataset.py  eval.py  model.py  pred.py  predict.py  train.py
