[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "organized-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.11.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "toml>=0.10.2",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "typer>=0.20.0",
    "xarray>=2025.11.0",
]

[dependency-groups]
dev = ["pre-commit>=4.5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
giems = "giems_lstm.main:app"
